--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,7 @@ p,
 blockquote,
 pre,
 a,
+Link,
 abbr,
 acronym,
 address,
@@ -90,6 +91,8 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  text-decoration: none;
+  color: black;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -229,8 +232,8 @@ img {
 .coin__title {
   display: block;
   margin-left: 8px;
-    min-width: 160px;
-text-align: left;
+  min-width: 160px;
+  text-align: left;
 }
 
 .coin__symbol {
@@ -242,12 +245,29 @@ text-align: left;
   width: 50px;
 }
 
+.header, Link{
+  color: black;
+  text-decoration: none;
+}
+
 .dark-mode {
   color: #fff;
   background-color: #313843;
+
+  h1, h2, h3, h4, Link{
+    color: white
+  }
 
   .navbar {
     background-color: #1F2022;
     border: none;
   }
+}
+
+.negative {
+  color: red;
+}
+
+.positive {
+  color: green;
 }
